force-app/main/default/objects/Expenditure__c/Expenditure__c.object-meta.xml
<CustomObject>
    <label>Expenditure</label>
    <nameField>
        <label>Month Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Expenditures</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>