force-app/main/default/objects/Expenditure__c/fields/Allowed_Reasons__c.field-meta.xml
<CustomField>
    <fullName>Allowed_Reasons__c</fullName>
    <label>Allowed Reasons</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Candidate Treat Expense</fullName>
            </value>
            <value>
                <fullName>Candidate Hiring Expense</fullName>
            </value>
            <value>
                <fullName>Sales Expense</fullName>
            </value>
            <value>
                <fullName>GST</fullName>
            </value>
            <value>
                <fullName>Equipment Expense</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>