force-app/main/default/objects/Expenditure__c/fields/Finance_Department_Expenditure__c.field-meta.xml
<CustomField>
    <fullName>Finance_Department_Expenditure__c</fullName>
    <label>Finance Department Expenditure</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>