force-app/main/default/objects/Expenditure__c/fields/HR_Department_Expenditure__c.field-meta.xml
<CustomField>
    <fullName>HR_Department_Expenditure__c</fullName>
    <label>HR Department Expenditure</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>