force-app/main/default/objects/Expenditure__c/fields/Specify_Reason_clearly__c.field-meta.xml
<CustomField>
    <fullName>Specify_Reason_clearly__c</fullName>
    <label>Specify Reason clearly</label>
    <length>100</length>
    <type>Text</type>
</CustomField>