force-app/main/default/objects/Expenditure__c/recordTypes/RT_For_Compensation_Department.recordType-meta.xml
<RecordType>
    <fullName>RT_For_Compensation_Department</fullName>
    <active>true</active>
    <label>RT For Compensation Department</label>
</RecordType>