force-app/main/default/objects/Expenditure__c/recordTypes/RT_For_Compensation_Department_of_USA.recordType-meta.xml
<RecordType>
    <fullName>RT_For_Compensation_Department_of_USA</fullName>
    <active>true</active>
    <label>RT For Compensation Department of USA</label>
</RecordType>