force-app/main/default/objects/Expenditure__c/recordTypes/RT_For_Finance_Department.recordType-meta.xml
<RecordType>
    <fullName>RT_For_Finance_Department</fullName>
    <active>true</active>
    <label>RT For Finance Department</label>
</RecordType>