force-app/main/default/objects/Expenditure__c/listViews/Compensation_Department_Records.listView-meta.xml
<ListView>
    <fullName>Compensation_Department_Records</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Expenditure__c.RT_For_Compensation_Department,Expenditure__c.RT_For_Compensation_Department_of_USA</value>
    </filters>
    <label>Compensation Department Records</label>
</ListView>