force-app/main/default/objects/Expenditure__c/listViews/Finance_Records.listView-meta.xml
<ListView>
    <fullName>Finance_Records</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Expenditure__c.RT_For_Finance_Department</value>
    </filters>
    <label>Finance Records</label>
</ListView>